src/test/ui/return/issue-100741-return-anonymous-enum.rs
struct Foo {}

fn foo<'a>() -> i32 | Vec<i32> | &str | &'a String | Foo {
    //~^ ERROR: anonymous enums are not supported
}

fn main() {}
